--- a/app/views/listings/_booking_module_call_to_actions.html.liquid
+++ b/app/views/listings/_booking_module_call_to_actions.html.liquid
@@ -1,3 +1,6 @@
+{% if action_translation == blank %}
+  {% assign action_translation = 'reservations.book' %}
+{% endif %}
 {% if listing.action_rfq? %}
   {% if listing.action_free_booking? %}
     <div class="rfq-explanation">
@@ -6,12 +9,12 @@
   {% endif %}
   <div class="row-fluid booking-submit-row">
     {% if listing.action_free_booking? %}
-      <div class="hidden"><input type="submit" data-disable-with="{{ 'general.processing' | translate }}" value="{{ 'reservations.book' | translate }}" {% for prop in book_hash %} {{prop[0]}}="{{prop[1]}}"{% endfor %}></div>
+      <div class="hidden"><input type="submit" data-disable-with="{{ 'general.processing' | translate }}" value="{{ action_translation | translate }}" {% for prop in book_hash %} {{prop[0]}}="{{prop[1]}}"{% endfor %}></div>
     {% else %}
-      <input type="submit" data-disable-with="{{ 'general.processing' | translate }}" value="{{ 'reservations.book' | translate }}" {% for prop in book_hash %} {{prop[0]}}="{{prop[1]}}"{% endfor %}>
+      <input type="submit" data-disable-with="{{ 'general.processing' | translate }}" value="{{ action_translation | translate }}" {% for prop in book_hash %} {{prop[0]}}="{{prop[1]}}"{% endfor %}>
     {% endif %}
     <input type="submit" data-disable-with="{{ 'general.processing' | translate }}" id="rfq-{{listing.id}}" class="{{rfq_class}}" data-behavior="RFQ" data-modal-method="GET" data-modal-url="{% if current_user %}{{ listing.new_ticket_url }}{% else %}{{ 'new_user_registration_path' | generate_url: return_to: listing.show_path }}{% endif %}" value="{{ rfq_label }}">
   </div>
 {% else %}
-  <input type="submit" data-disable-with="{{ 'general.processing' | translate }}" value="{{ 'reservations.book' | translate }}" {% for prop in book_hash %} {{prop[0]}}="{{prop[1]}}"{% endfor %}>
+  <input type="submit" data-disable-with="{{ 'general.processing' | translate }}" value="{{ action_translation | translate }}" {% for prop in book_hash %} {{prop[0]}}="{{prop[1]}}"{% endfor %}>
 {% endif %}
