--- a/app/views/checkout/_summary.html.liquid
+++ b/app/views/checkout/_summary.html.liquid
@@ -1,3 +1,5 @@
+ <h1>Order summary</h1>
+
 <h2>{{ @order.total_units_text | titleize }}</h2>
 
 {% if @order.action_hourly_booking? %}
@@ -10,3 +12,53 @@
 {% endif %}
 
 <hr class='thin'>
+
+<table class="payment-summary">
+  <thead>
+    <th scope="col">Item</th>
+
+    {% if @order.included_tax? %}
+      <th scope="col">Net</th>
+      <th scope="col">Tax</th>
+    {% endif %}
+
+    <th scope="col">Price</th>
+
+    {% if @order.additional_tax? %}
+      <th scope="col">Tax</th>
+      <th scope="col">Gross</th>
+    {% endif %}
+
+    <th scope="col">Qty</th>
+    <th scope="col">Total</th>
+  </thead>
+  <tfoot>
+    <tr>
+      <td colspan="{% if @order.included_tax? || @order.additional_tax? %}4{% else %}2{% endif %}"></td>
+      <th headers="summary-total">Total</th>
+      <td id="summary-total">{{ @order.total_amount | price_with_cents_with_currency }}</td>
+    </tr>
+  </tfoot>
+  <tbody>
+    {% for item in @order.line_items %}
+      <tr data-line-item-class="{{ item.class_name }}">
+        <td>{{ item.name }}</td>
+
+        {% if @order.included_tax? %}
+          <td>{{ item.net_price | price_with_cents_with_currency }}</td>
+          <td>{{ item.included_tax_total_rate }}%</td>
+        {% endif %}
+
+        <td>{{ item.formatted_unit_price }}</td>
+
+        {% if @order.additional_tax? %}
+          <td>{{ item.additional_tax_total_rate }}%</td>
+          <td>{{ item.gross_price | price_with_cents_with_currency }}</td>
+        {% endif %}
+        <td>{{ item.quantity }}</td>
+        <td>{{ item.total_price | price_with_cents_with_currency }}</td>
+      </tr>
+    {% endfor %}
+  </tbody>
+</table>
+
