--- a/app/views/dashboard/company/purchases/_purchase.html.haml
+++ b/app/views/dashboard/company/purchases/_purchase.html.haml
@@ -134,7 +134,7 @@
           = link_to t('buy_sell_market.checkout.labels.actions.confirm'), confirm_dashboard_company_orders_received_path(purchase), data: { confirm: t('buy_sell_market.checkout.labels.actions.confirm_approve') }, class: 'btn btn-primary', method: :post
 
         - if purchase.paid? && !purchase.completed?
-          = link_to t('buy_sell_market.checkout.labels.actions.complete'), complete_dashboard_company_orders_received_path(purchase), data: { confirm: t('buy_sell_market.checkout.labels.actions.complete_approve') }, class: 'btn btn-primary', method: :post
+          = link_to t('buy_sell_market.checkout.labels.actions.archive'), complete_dashboard_company_orders_received_path(purchase), data: { confirm: t('buy_sell_market.checkout.labels.actions.complete_approve') }, class: 'btn btn-primary', method: :post
 
         - if purchase.cancelable? #&& !purchase.paid?
           = link_to t('buy_sell_market.checkout.labels.actions.cancel'), cancel_dashboard_company_orders_received_path(purchase), data: { confirm: t('buy_sell_market.checkout.labels.actions.confirm_cancel') }, class: 'btn btn-warning', method: :post
