--- a/app/views/dashboard/company/transactables/new.html.haml
+++ b/app/views/dashboard/company/transactables/new.html.haml
@@ -19,4 +19,4 @@
 
   .panel.form-actions
     .panel-body
-      = f.button :submit, t('dashboard.items.save')
+      = f.button :submit, t('dashboard.items.save'), data: { disable_with: t('general.saving') }
