--- a/app/views/dashboard/company/transactables/index.html.liquid
+++ b/app/views/dashboard/company/transactables/index.html.liquid
@@ -1,3 +1,6 @@
+{% assign i18n_title = 'dashboard.transactables.manage' | translate %}
+{% title i18n_title %}
+
 {% content_for 'page_header' %}
   <h1>
     <span class='hidden-xs'>{{ 'dashboard.transactables.title.manage' | translate }}</span>
