NM-5151 Lack of validation for missing phone number

--- a/app/frontend/stylesheets/sections/_user_messages.scss
+++ b/app/frontend/stylesheets/sections/_user_messages.scss
@@ -190,6 +190,10 @@ section.user_messages {
       background-color: #C0C0C0;
     }
   }
+
+  a.btn {
+    padding: 0;
+  }
 }
 
 @media (max-width: $ipad-width) {
