--- a/app/frontend/stylesheets/intel/modules/_group.scss
+++ b/app/frontend/stylesheets/intel/modules/_group.scss
@@ -23,10 +23,20 @@
 
   h2 {
     font-weight: bold;
-    margin: 20px 0;
+    margin: 20px 0 0 0;
+  }
+
+  .group-location {
+    font-size: 15px;
+    margin: 5px 0 0 0;
+
+    span {
+      font-weight: bold;
+    }
   }
 
   .owner-card {
+    margin: 20px 0;
     overflow: hidden;
 
     a {
