--- a/app/views/layouts/_favicon.html.haml
+++ b/app/views/layouts/_favicon.html.haml
@@ -1,10 +1,10 @@
 - if @blog_instance.try(:is_near_me?)
-  %link{href: asset_url('favicon.png'), rel: "shortcut icon"}/
+  %link{href: asset_url('favicon.png'), rel: 'shortcut icon'}/
 - else
-  %link{href: platform_context.favicon_image.url || asset_url('favicon.png'), rel: "shortcut icon"}/
+  %link{href: platform_context.favicon_image.url(v: Time.now.to_i) || asset_url('favicon.png'), rel: 'shortcut icon'}/
   - if platform_context.icon_image.url
-    %link{href: platform_context.icon_image.url, rel: "icon", sizes: "60x60"}/
-    %link{href: platform_context.icon_image.url, rel: "apple-touch-icon-precomposed", sizes: "60x60"}/
+    %link{href: platform_context.icon_image.url, rel: 'icon', sizes: '60x60'}/
+    %link{href: platform_context.icon_image.url, rel: 'apple-touch-icon-precomposed', sizes: '60x60'}/
   - if platform_context.icon_retina_image.url
-    %link{href: platform_context.icon_retina_image.url, rel: "icon", sizes: "120x120"}/
-    %link{href: platform_context.icon_retina_image.url, rel: "apple-touch-icon-precomposed", sizes: "120x120"}/
+    %link{href: platform_context.icon_retina_image.url, rel: 'icon', sizes: '120x120'}/
+    %link{href: platform_context.icon_retina_image.url, rel: 'apple-touch-icon-precomposed', sizes: '120x120'}/
