--- a/app/frontend/stylesheets/intel/modules/_global-header.scss
+++ b/app/frontend/stylesheets/intel/modules/_global-header.scss
@@ -27,10 +27,16 @@
 
     .logo {
         float: left;
-        margin: 15px 50px 0 0;
+        margin: 15px 30px 0 0;
         font-size: 19px;
         font-weight: normal;
         line-height: 40px;
+
+        @include bp-range(1405px, 1269px) {
+          .text {
+            display: none;
+          }
+        }
 
         a {
             display: inline-block;
@@ -158,7 +164,7 @@
     .search {
         float: left;
         width: 300px;
-        margin: 20px 50px 0 0;
+        margin: 20px 30px 0 0;
 
         > div {
             position: relative;
@@ -218,7 +224,7 @@
 
 
         li ~ li {
-            margin-left: 30px;
+            margin-left: 25px;
         }
 
         li:before {
@@ -229,12 +235,6 @@
             display: block;
             color: #fff;
             text-decoration: none !important;
-
-            @include bp-range(1465px, 1270px) {
-              span.text {
-                display: none;
-              }
-            }
         }
 
         li a:hover {
