--- a/app/views/dashboard/company/locations/_location.html.haml
+++ b/app/views/dashboard/company/locations/_location.html.haml
@@ -5,7 +5,7 @@
 %span{data: { "location-id" => location.id, availability: pretty_availability_sentence(location.availability).to_s }, hidden: defined?(f) ? is_hidden : false }
   - if !single_location
     |
-  = link_to t('dashboard.location.edit'), edit_dashboard_company_location_path(location, with_deleted_link: with_deleted_link, should_check_address: @transactable_type.try(:rental_shipping)), data: { modal: true }
+  = link_to t('dashboard.location.edit'), edit_dashboard_company_location_path(location, with_deleted_link: with_deleted_link, should_check_address: current_instance.shippo_enabled?), data: { modal: true }
   - if !single_location && with_deleted_link
     |
     = link_to t('dashboard.location.remove'), dashboard_company_location_path(location), remote: true, method: :delete,
