--- a/app/community_views/shared/_activity_status_body.html.haml
+++ b/app/community_views/shared/_activity_status_body.html.haml
@@ -1,4 +1,4 @@
-- if [:user_commented_on_project, :user_commented].include?(event.event.to_sym)
+- if [:user_commented_on_project, :user_commented, :user_commented_on_user_activity].include?(event.event.to_sym)
   - followed = event.event_source.commentable
   - body = event.event_source.body
   - header_image = "intel/status-a-chat-a.png"
