--- a/app/frontend/stylesheets/sections/listings/_search.scss
+++ b/app/frontend/stylesheets/sections/listings/_search.scss
@@ -61,6 +61,10 @@ section.search#content {
     z-index: $map-z-index - 1;
     padding: 40px 0;
 
+    &.with_slider {
+      margin-top: 40px;
+    }
+
     &.map {
       position: absolute;
       top: 110px;
@@ -792,6 +796,10 @@ section.search section#category-tree {
 
 section.search section#results.list {
   margin-top: 120px;
+
+  &.with_slider {
+    margin-top: 190px;
+  }
 
   article.listing {
     box-sizing: border-box;
@@ -1886,3 +1894,9 @@ div.search-view-listing {
         top: 13px;
     }
 }
+
+.search-list-price-slider-container {
+  display: block;
+  clear: both;
+}
+
