--- a/app/views/search/_list_results.html.haml
+++ b/app/views/search/_list_results.html.haml
@@ -1,5 +1,7 @@
+
 - if @searcher.result_count > 0
-  %section#results.list.clearfix
+  %section#results.list.clearfix{ class: @transactable_type.show_price_slider ? 'with_slider' : '' }
+    .search-max-price{:'data-max-price' => @searcher.max_price, :'data-min-price' => @searcher.min_price }
     - @searcher.results.each do |result|
       - if result.is_a?(User)
         = render partial: 'search/list/user', locals: { user: result, current_user: current_user, user_has_firends: current_user.try(:has_friends) }
@@ -10,7 +12,8 @@
     = render 'search/footer'
     = render 'shared/loading_spinner'
 - else
-  %section#results.no_results
+  %section#results.no_results{ class: @transactable_type.show_price_slider ? 'with_slider' : '' }
+    .search-max-price{:'data-max-price' => @searcher.max_price, :'data-min-price' => @searcher.min_price }
     = render 'shared/loading_spinner'
     .text-center
       %br/
@@ -19,3 +22,4 @@
       %br/
       %br/
       %h1.tk-adelle.fat No results found
+
