IDM-98 add featured ribbon to groups

--- a/app/community_views/shared/_group.html.haml
+++ b/app/community_views/shared/_group.html.haml
@@ -5,6 +5,10 @@
         - if group.cover_image.present?
           = image_tag group.cover_image.url(:project_cover)
 
+          - if group.featured?
+            %figcaption
+              = t :featured
+
     %ul.numbers
       %li
         = t :members
