NM-5271 fix 500 payout page

--- a/app/views/dashboard/shared/fields/payment_methods/_credit_card.html.haml
+++ b/app/views/dashboard/shared/fields/payment_methods/_credit_card.html.haml
@@ -10,5 +10,7 @@
       = f.simple_fields_for :credit_card_attributes, credit_card do |form|
         = render 'credit_cards/credit_card_fields', form: form
 
-= render 'listings/reservations/confirm_reservations', f: f
+
+- if @order
+  = render 'listings/reservations/confirm_reservations', f: f
 
