--- a/app/views/instance_admin/manage/payments/_list_table.html.haml
+++ b/app/views/instance_admin/manage/payments/_list_table.html.haml
@@ -5,7 +5,7 @@
         = select_tag :payment_gateway_id, options_from_collection_for_select(@payment_gateways, "id", "name", params[:payment_gateway_id]), include_blank: "All Payment Gateways", class: "selectpicker"
 
       .col-xs-2
-        = select_tag :transferred, options_for_select([ ["Awaiting for transfer", :awaiting], ["With transfer attempt", 'transferred'], ["All", :all] ], params[:transferred]), class: "selectpicker"
+        = select_tag :transferred, options_for_select([ ["Awaiting for transfer", :awaiting], ["With transfer attempt", 'transferred'], ["All", :all], ["Ecluded from transfers", :excluded] ], params[:transferred]), class: "selectpicker"
       .col-xs-2
         = select_tag :state, options_for_select(Payment.state_machine.states.map{|s| [s.name.capitalize, s.name] } , params[:state]), include_blank: "In all states", class: "selectpicker"
       .col-xs-1
