--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,5 +1,5 @@
 !!!
-%html
+%html.no-js
   %head
     %meta{name: 'app-server', content: ENV['HOSTNAME']}
 
@@ -54,7 +54,7 @@
 
     = yield(:head_bottom)
 
-  %body{class: theme_class(@theme_name)}
+  %body{class: theme_class(@theme_name), itemscope: true, itemtype: "http://schema.org/WebPage"}
     = yield(:body_top)
     .dnm-page-body{:class => "#{'main-page' if home_page?}" }
       = render 'shared/render_flash'
