NM-5203 No default dates in datepickers

--- a/app/views/home/search/_datepickers.html.liquid
+++ b/app/views/home/search/_datepickers.html.liquid
@@ -1,5 +1,5 @@
 <div class="span2">
-  <input class='search_date' type="text" name='start_date' readonly="readonly" value="From" placeholder="coco" />
+  <input class='search_date' type="text" name='start_date' readonly="readonly" value="From" />
   <input type="hidden" name="availability[dates][start]"/>
 </div>
 
